--- a/custom/plugins/ElioAddCustomField/composer.json
+++ b/custom/plugins/ElioAddCustomField/composer.json
@@ -11,8 +11,8 @@
   "extra": {
     "shopware-plugin-class": "Elio\\AddCustomField\\ElioAddCustomField",
     "label": {
-      "de-DE": "Skeleton plugin",
-      "en-GB": "Skeleton plugin"
+      "de-DE": "Elio CustomField hinzufügen",
+      "en-GB": "Elio Add CustomField"
     }
   }
 }
